Moved methods of BoardGameRender to the Resource that uses them